# OBSplugin

./: .editorconfig  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.claude/skills/verify/: SKILL.md
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/scripts/: testflight_feedback.py  testflight_whats_to_test.py
.github/workflows/: auto-release.yml  automerge.yml  build.yml  dependabot-claude-review.yml  release.yml  testflight-feedback.yml  testflight.yml
assets/: make-icon.py
docs/: DEBUGGING-SCREEN-MIRROR.md  DEVELOPMENT.md  PERFORMANCE.md  PROTOCOL.md  ROADMAP.md  TESTFLIGHT.md  UI_DESIGN.md
installer/macos/: Info.plist
installer/windows/: lenslink.iss
ios-app/: BUILDING.md  project.yml  syntax-check.sh
ios-app/BroadcastExtension/: SampleHandler.swift
ios-app/Sources/: AudioReference.swift  BroadcastButton.swift  BroadcastProbe.swift  CameraManager.swift  CameraPreviewView.swift  ContentView.swift  DesignSystem.swift  DiscoveryClient.swift  H264Encoder.swift  LocalNetworkPrompt.swift  NetworkInfo.swift  OBSCamApp.swift  OptionsView.swift  Protocol.swift  RemoteStartIntents.swift  StreamClient.swift  Streamer.swift  StreamingView.swift  VideoEncoder.swift
obs-plugin/: BUILDING.md  CMakeLists.txt
obs-plugin/data/: nv12.effect
obs-plugin/data/locale/: en-US.ini
obs-plugin/src/: frontend-ui.cpp  gpu-frame.c  gpu-frame.h  h264-decoder.c  h264-decoder.h  health.h  ios-camera-source.c  lipsync.c  lipsync.h  mdns.c  mdns.h  net-compat.h  pipeline-bench.c  pipeline-bench.h  plugin-main.c  plugin-settings.c  plugin-settings.h  protocol.h  usbmux.c  usbmux.h  web-control.c  web-control.h
tools/: bench-report.py
